--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Be+Vietnam+Pro:ital,wght@0,100;0,200;0,400;0,500;1,100;1,200;1,400&family=Russo+One&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Be+Vietnam+Pro:ital,wght@0,100;0,200;0,400;0,500;1,100;1,200;1,400&family=Roboto:wght@500&family=Russo+One&display=swap");
 * {
   padding: 0;
   margin: 0;
@@ -53,24 +54,137 @@
   padding-top: 23px;
 }
 
-
-
 /* HERO  SECTION */
 
-.hero-section{
-    display: flex;
-    margin-top: 50px;
+.hero-section {
+  display: flex;
+  margin-top: 60px;
 }
 
-.hero-section-left{
-    width: 50%;
+.hero-section-left {
+  width: 50%;
+  margin-left: 35px;
 }
 
-.herosection-left-img{
-    width: 512px;
-    height: 514px;
+.herosection-left-img {
+  width: 505px;
+  height: 505px;
 }
 
-.hero-section-right{
-    width: 50%;
+.hero-section-right {
+  margin-top: 55px;
+  width: 50%;
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
+}
+
+.herosection-right-para {
+  background-color: #149f39;
+  width: 205px;
+  height: 35px;
+  color: white;
+  font-size: 14px;
+  font-family: "Roboto", sans-serif;
+  font-weight: 400;
+  text-align: center;
+  padding: 9px;
+}
+
+.herosection-right-heading {
+  color: black;
+  font-size: 72px;
+
+  font-weight: 500;
+  font-family: "Roboto", sans-serif;
+}
+
+.herosection-subheading {
+  color: black;
+  font-size: 12px;
+  font-family: "Roboto", sans-serif;
+  font-weight: 500;
+  line-height: 19px;
+  width: 363px;
+  height: 35px;
+  margin-top: -15px;
+}
+
+.herosection-button {
+  font-family: "Roboto", sans-serif;
+  width: 174px;
+  height: 57px;
+  background-color: #ffc066;
+  text-align: center;
+  padding-top: 14px;
+  color: white;
+
+  font-size: 24px;
+
+  font-weight: 500;
+  /* line-height: 19px; */
+}
+
+
+.facilities{
+  display: flex;
+  margin-top:7rem;
+  justify-content: center;
+  width: 878px;
+  height: 109px;
+  margin-left: 10rem;
+  gap: 3rem;
+}
+
+.commonfacility{
+  display: flex;
+  /* width: 37%; */
+  gap: 1rem;
+
+  
+  
+}
+
+.facility-content{
+  display: flex;
+  flex-direction: column;
+  width: 188px;
+  height: 38px;
+  padding-top: 9px;
+  gap: 4px;
+}
+
+.facility-image-1{
+  width: 80px;
+  height: 83px;
+}
+
+.facility-image-2{
+  width: 64px;
+  height: 64px;
+
+}
+
+.facility-image-3{
+  width: 70px;
+  height: 70px;
+}
+
+.facility-head{
+  color: black;
+font-size: 18px;
+font-family: "Roboto", sans-serif;
+font-weight: 600;
+line-height: 19px;
+
+
+}
+
+.facility-content p{
+  color: black;
+font-size: 14px;
+font-family: "Roboto", sans-serif;
+/* font-weight: 300; */
+line-height: 19px;
+letter-spacing: 0.42px;
 }
