--- a/style.css
+++ b/style.css
@@ -118,34 +118,30 @@
   text-align: center;
   padding-top: 14px;
   color: white;
-
+  cursor: pointer;
   font-size: 24px;
 
   font-weight: 500;
   /* line-height: 19px; */
 }
 
-
-.facilities{
+.facilities {
   display: flex;
-  margin-top:7rem;
+  margin-top: 7rem;
   justify-content: center;
   width: 878px;
   height: 109px;
   margin-left: 10rem;
-  gap: 3rem;
+  gap: 2rem;
 }
 
-.commonfacility{
+.commonfacility {
   display: flex;
   /* width: 37%; */
   gap: 1rem;
-
-  
-  
 }
 
-.facility-content{
+.facility-content {
   display: flex;
   flex-direction: column;
   width: 188px;
@@ -154,37 +150,112 @@
   gap: 4px;
 }
 
-.facility-image-1{
+.facility-image-1 {
   width: 80px;
   height: 83px;
 }
 
-.facility-image-2{
+.facility-image-2 {
+  padding-top: 5px;
   width: 64px;
   height: 64px;
-
 }
 
-.facility-image-3{
+.facility-image-3 {
   width: 70px;
   height: 70px;
 }
 
-.facility-head{
+.facility-head {
   color: black;
-font-size: 18px;
-font-family: "Roboto", sans-serif;
-font-weight: 600;
-line-height: 19px;
-
-
+  font-size: 18px;
+  font-family: "Roboto", sans-serif;
+  font-weight: 600;
+  line-height: 19px;
 }
 
-.facility-content p{
+.facility-content p {
   color: black;
-font-size: 14px;
-font-family: "Roboto", sans-serif;
-/* font-weight: 300; */
-line-height: 19px;
-letter-spacing: 0.42px;
+  font-size: 14px;
+  font-family: "Roboto", sans-serif;
+  /* font-weight: 300; */
+  line-height: 19px;
+  letter-spacing: 0.42px;
+}
+
+.horizontal-row hr {
+  border: 1px solid #b7b7b7;
+  width: 100%;
+  height: 100%;
+}
+
+.gallery-section {
+  display: flex;
+  flex-direction: column;
+  margin-top: 5rem;
+  justify-content: center;
+  align-items: center;
+}
+
+.gallery-heading {
+  color: white;
+  font-size: 24px;
+  font-family: "Roboto", sans-serif;
+  font-weight: 400;
+  background-color: #149f39;
+  width: 137px;
+  height: 43px;
+  text-align: center;
+  padding-top: 7px;
+}
+
+.gallery-sub-heading {
+  margin-top: 2rem;
+  color: black;
+  font-size: 36px;
+  font-family: Roboto;
+  font-weight: 400;
+}
+
+.gallery-container {
+  margin-top: 3rem;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 2rem;
+  margin-left: -10px;
+}
+
+.img1 {
+  width: 585px;
+  height: 585px;
+}
+
+.img2 {
+  width: 276px;
+  height: 585px;
+}
+
+.img3 {
+  width: 277px;
+  height: 274px;
+}
+
+.img4 {
+  width: 277px;
+  height: 277px;
+}
+.img5 {
+  width: 277px;
+  height: 277px;
+}
+.img6 {
+  width: 278px;
+  height: 278px;
+  margin-left: -1px;
+}
+.img7 {
+  margin-top: -304px;
+  width: 279px;
+  height: 581px;
+  margin-left: -3px;
 }
